Updated URLs on website

--- a/resources.html
+++ b/resources.html
@@ -83,14 +83,12 @@ http://www.computational-epigenomics.com/downloads/DecompProtocol/RnBeads_Report
 ">
 http://www.computational-epigenomics.com/downloads/DecompProtocol/RnBeads_Report_TCGA_LUAD/index.html
 </a></td>
-                     <td>The <i>RnBeads</i> report generated from the lung adenocarcinoma dataset from TCGA (TCGA-LUAD). The protocol only requires the Import and Quality Control modules to be executed, but we provide a complete execution of the <i>RnBeads</i> pipeline including exploratory and differential analysis.</td>
+                     <td>The <i>RnBeads</i> report generated from the lung adenocarcinoma dataset from TCGA (TCGA-LUAD). The protocol only requires the Import and Quality Control modules to be executed, but we provide a complete execution of the <i>RnBeads</i> pipeline including exploratory analysis.</td>
                    </tr>
                    <tr>
                      <td><i>RnBSet</i></td>
-                     <td><a href="
-missing
-">
-missing
+                     <td><a href="www.computational-epigenomics.com/downloads/DecompProtocol/rnbSet_unnormalized.zip">
+www.computational-epigenomics.com/downloads/DecompProtocol/rnbSet_unnormalized.zip
 </a></td>
                      <td>An processed <i>RnBSet</i> object comprising sample metadata, DNA methylation data, and CpG annotations. The dataset has not been subject to preprocessing and normalization.</td>
                    </tr>
