Updated the URLs

--- a/resources.html
+++ b/resources.html
@@ -79,52 +79,52 @@
                    <tr>
                      <td><i>RnBeads</i> report</td>
                      <td><a href="
-http://www.computational-epigenomics.com/downloads/DecompProtocol/RnBeads_Report_TCGA_LUAD/index.html
+http://epigenomics.dkfz.de/downloads/DecompProtocol/RnBeads_Report_TCGA_LUAD/index.html
 ">
-http://www.computational-epigenomics.com/downloads/DecompProtocol/RnBeads_Report_TCGA_LUAD/index.html
+http://epigenomics.dkfz.de/downloads/DecompProtocol/RnBeads_Report_TCGA_LUAD/index.html
 </a></td>
                      <td>The <i>RnBeads</i> report generated from the lung adenocarcinoma dataset from TCGA (TCGA-LUAD). The protocol only requires the Import and Quality Control modules to be executed, but we provide a complete execution of the <i>RnBeads</i> pipeline including exploratory analysis.</td>
                    </tr>
                    <tr>
                      <td><i>RnBSet</i></td>
-                     <td><a href="www.computational-epigenomics.com/downloads/DecompProtocol/rnbSet_unnormalized.zip">
-www.computational-epigenomics.com/downloads/DecompProtocol/rnbSet_unnormalized.zip
+                     <td><a href="http://epigenomics.dkfz.de/downloads/DecompProtocol/rnbSet_unnormalized.zip">
+http://epigenomics.dkfz.de/downloads/DecompProtocol/rnbSet_unnormalized.zip
 </a></td>
                      <td>An processed <i>RnBSet</i> object comprising sample metadata, DNA methylation data, and CpG annotations. The dataset has not been subject to preprocessing and normalization.</td>
                    </tr>
 					<tr>
                      <td>CpGs passing quality filtering</td>
                      <td><a href="
-http://www.computational-epigenomics.com/downloads/DecompProtocol/sites_passing_quality_filtering.csv
+http://epigenomics.dkfz.de/downloads/DecompProtocol/sites_passing_quality_filtering.csv
 ">
-http://www.computational-epigenomics.com/downloads/DecompProtocol/sites_passing_quality_filtering.csv
+http://epigenomics.dkfz.de/downloads/DecompProtocol/sites_passing_quality_filtering.csv
 </a></td>
                      <td>A list of CpG identifiers from the EPIC array, which pass the stringent quality criteria for this particular dataset. The list comes as a comma-separated values (CSV) file.</td>
                    </tr>
 					<tr>
                      <td>CpGs passing context filtering</td>
                      <td><a href="
-http://www.computational-epigenomics.com/downloads/DecompProtocol/sites_passing_context_filtering.csv
+http://epigenomics.dkfz.de/downloads/DecompProtocol/sites_passing_context_filtering.csv
 ">
-http://www.computational-epigenomics.com/downloads/DecompProtocol/sites_passing_context_filtering.csv
+http://epigenomics.dkfz.de/downloads/DecompProtocol/sites_passing_context_filtering.csv
 </a></td>
                      <td>A list of CpG identifiers from the EPIC array, which pass the context filtering steps. In this step, sites annotated to single nucleotide polymorphisms, or to the sex chromosomes are removed.</td>
                    </tr>
 					<tr>
                      <td>CpGs passing complete filtering</td>
                      <td><a href="
-http://www.computational-epigenomics.com/downloads/DecompProtocol/sites_passing_complete_filtering.csv
+http://epigenomics.dkfz.de/downloads/DecompProtocol/sites_passing_complete_filtering.csv
 ">
-http://www.computational-epigenomics.com/downloads/DecompProtocol/sites_passing_complete_filtering.csv
+http://epigenomics.dkfz.de/downloads/DecompProtocol/sites_passing_complete_filtering.csv
 </a></td>
                      <td>A list of CpG identifiers from the EPIC array, which pass all filtering steps employed in <i>DecompPipeline</i>. This is an extension of the list above, which also removes sites that have been reported to be <a href="https://doi.org/10.4161/epi.23470">cross-reactive</a>.</td>
                    </tr>
 					<tr>
                      <td><i>FactorViz</i> output</td>
                      <td><a href="
-http://www.computational-epigenomics.com/downloads/DecompProtocol/FactorViz_outputs.tar.gz
+http://epigenomics.dkfz.de/downloads/DecompProtocol/FactorViz_outputs.tar.gz
 ">
-http://www.computational-epigenomics.com/downloads/DecompProtocol/FactorViz_outputs.tar.gz
+http://epigenomics.dkfz.de/downloads/DecompProtocol/FactorViz_outputs.tar.gz
 </a></td>
                      <td>This folder comprises the results of the deconvolution experiment of the TCGA LUAD dataset, which can be directly (after extraction) imported through <i>FactorViz</i>. The folder contains the <i>MeDeComSet</i>, genomic annotation of the CpGs, and sample metadata.</td>
                    </tr>
