--- a/resources.html
+++ b/resources.html
@@ -141,7 +141,7 @@ http://epigenomics.dkfz.de/downloads/DecompProtocol/FactorViz_outputs.tar.gz
     <!-- Footer -->
     <hr>
     <footer class="py-5 bg-inverse">
-        <div class="container">>           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:mscherer@mpi-inf.mpg.de">Support</a> 2019 </p>
+        <div class="container">           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:mscherer@mpi-inf.mpg.de">Support</a> 2019 </p>
         </div>
     </footer>
 
