Added manifest file to resources

--- a/resources.html
+++ b/resources.html
@@ -77,6 +77,11 @@
                  </thead>
                  <tbody>
                    <tr>
+					 <td>Manifest file for TCGA-LUAD</td>
+					 <td><a href="data/gdc_manifest.2019-01-23.txt">gdc_manifest.2019-01-23.txt</a></td>
+					 <td>The manifest file for the TCGA LUAD dataset. It can be used to download the IDAT files and associated metadata from TCGA using the <a href="https://gdc.cancer.gov/access-data/gdc-data-transfer-tool">GDC data transfer tool</a>.	
+				  </tr>
+				  <tr>
                      <td><i>RnBeads</i> report</td>
                      <td><a href="
 http://epigenomics.dkfz.de/downloads/DecompProtocol/RnBeads_Report_TCGA_LUAD/index.html
