Updated website and associated material

--- a/resources.html
+++ b/resources.html
@@ -78,7 +78,7 @@
                  <tbody>
                    <tr>
 					 <td>Manifest file for TCGA-LUAD</td>
-					 <td><a href="http://epigenomics.dkfz.de/DecompProtocol/data/gdc_manifest.2019-01-23.txt">http://epigenomics.dkfz.de/DecompProtocol/data/gdc_manifest.2019-01-23.txt</a></td>
+					 <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/gdc_manifest.2019-01-23.txt">https://github.com/CompEpigen/Decomp_web/blob/master/data/gdc_manifest.2019-01-23.txt</a></td>
 					 <td>The manifest file for the TCGA LUAD dataset. It can be used to download the IDAT files and associated metadata from TCGA using the <a href="https://gdc.cancer.gov/access-data/gdc-data-transfer-tool">GDC data transfer tool</a>.	
 				  </tr>
 				  <tr>
@@ -154,32 +154,37 @@ http://epigenomics.dkfz.de/downloads/DecompProtocol/FactorViz_outputs.tar.gz
                  <tbody>
                    <tr>
 					 <td>Proportions heatmap</td>
-					 <td><a href="http://epigenomics.dkfz.de/DecompProtocol/data/proportion_heatmap.R">http://epigenomics.dkfz.de/DecompProtocol/data/proportion_heatmap.R</a></td>
-					 <td>An R script to generate the proportions heatmap of the TCGA-LUAD deconvolution experiment with 7 LMCs.	
+					 <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/proportion_heatmap.R">https://github.com/CompEpigen/Decomp_web/blob/master/data/proportion_heatmap.R</a></td>
+					 <td>An R script to generate the proportions heatmap of the TCGA-LUAD deconvolution experiment with 7 LMCs.</td>	
+				  </tr>
+ 				  <tr>
+					 <td>Trait association</td>
+					 <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/trait_association.R">https://github.com/CompEpigen/Decomp_web/blob/master/data/trait_association.R</a></td>
+					 <td>An R script to compare both quantitative and qualitative traits with LMC proportions.</td>
 				  </tr>
 				  <tr>
                      <td>Comparison with mutational data</td>
-                     <td><a href="http://epigenomics.dkfz.de/DecompProtocol/data/compare_with_mutational_data.R">http://epigenomics.dkfz.de/DecompProtocol/data/compare_with_mutational_data.R</a></td>
+                     <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/compare_with_mutational_data.R">https://github.com/CompEpigen/Decomp_web/blob/master/data/compare_with_mutational_data.R</a></td>
                      <td>An R script to associate LMC proportions with various kinds of genetic alterations.</td>
                    </tr>
 				  <tr>
                      <td>Comparison to cancer stemness</td>
-                     <td><a href="http://epigenomics.dkfz.de/DecompProtocol/data/correlation_with_stemness.R">http://epigenomics.dkfz.de/DecompProtocol/data/correlation_with_stemness.R</a></td>
+                     <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/correlation_with_stemness.R">https://github.com/CompEpigen/Decomp_web/blob/master/data/correlation_with_stemness.R</a></td>
                      <td>An R script to associate LMC proportions with cancer stemness indices.</td>
                    </tr>
 				  <tr>
                      <td>Differential LMC analyis</td>
-                     <td><a href="http://epigenomics.dkfz.de/DecompProtocol/data/compare_LMCs_scatterplot.R">http://epigenomics.dkfz.de/DecompProtocol/data/compare_LMCs_scatterplot.R</a></td>
+                     <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/compare_LMCs_scatterplot.R">https://github.com/CompEpigen/Decomp_web/blob/master/data/compare_LMCs_scatterplot.R</a></td>
                      <td>An R script to compare LMCs to one another, for instance to create scatterplots describing multiple LMCs.</td>
                    </tr>
 				  <tr>
                      <td>Proportions and gene expression</td>
-                     <td><a href="http://epigenomics.dkfz.de/DecompProtocol/data/quantify_gene_expression.R">http://epigenomics.dkfz.de/DecompProtocol/data/quantify_gene_expression.R</a></td>
+                     <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/quantify_gene_expression.R">https://github.com/CompEpigen/Decomp_web/blob/master/data/quantify_gene_expression.R</a></td>
                      <td>An R script to compare LMC proportions with gene expression values of cell type marker genes in lung tissue.</td>
                    </tr>
 				  <tr>
                      <td>Survival analysis</td>
-                     <td><a href="http://epigenomics.dkfz.de/DecompProtocol/data/survival_analyis.R">http://epigenomics.dkfz.de/DecompProtocol/data/survival_analyis.R</a></td>
+                     <td><a href="https://github.com/CompEpigen/Decomp_web/blob/master/data/survival_analyis.R">https://github.com/CompEpigen/Decomp_web/blob/master/data/survival_analyis.R</a></td>
                      <td>An R script to perform survival analysis of patients with different LMC proportions.</td>
                    </tr>
 
