--- a/resources.html
+++ b/resources.html
@@ -140,7 +140,7 @@ http://epigenomics.dkfz.de/downloads/DecompProtocol/FactorViz_outputs.tar.gz
         <!-- /.row -->
 
 	<h2>Plotting scripts</h2>
-		<p>The table below describes script that have been used to generate the plots shown within the protocol.</p>
+		<p>The table below describes scripts that have been used to generate the plots shown within the protocol.</p>
         <div class="row">
            <div class="col-md-12">               
                <table class="table table-hover">
