--- a/index.html
+++ b/index.html
@@ -90,13 +90,19 @@
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Visualization</h2>
+                <h2>Interpretation</h2>
                 <p>To visualize deconvolution results and to get from the results to biological interpretation, we implemented the R/shiny graphical user interface <a href="https://github.com/CompEpigen/FactorViz"><i>FactorViz</i></a>. <i>FactorViz</i> provides functions to link the obtained components (latent methylation components=LMCs) to phenotypic traits and to perform enrichment analysis on the sites that are particularly hypo-methylated in an LMC.</p>
             </div>
             <!-- /.col-md-4 -->
         </div>
         <!-- /.row -->
         <!-- Content Row -->
+		<div class="row">
+		     <div class="col-md-12">
+                <h2>Publication</h2>
+                <p>The protocol has been published as a preprint on <i>bioRxiv</i> (<a href="https://doi.org/10.1101/853150">https://doi.org/10.1101/853150</a>).</a></p>
+            </div>
+		</div>
         <div class="row extra-top-padding">
             <div class="col-md-12">
                 <h2>Developers</h2>
