Added figures to the protocol and smaller cosmetic updates

--- a/resources.html
+++ b/resources.html
@@ -62,10 +62,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <h1 class="mt-4 mb-3">Supplementary Resources for Reference-Free Deconvolution of complex DNA methylation data</h1>
 	
+		<a name="tableDes"></a>
 		<h2>Input data</h2>
 		<p>The table below describes the input data used for the reference-free deconvolution protocol and how it can be obtained.</p>
         <div class="row">
-           <div class="col-md-12">               
+           <div class="col-md-12">
                <table class="table table-hover">
                  <thead>
                    <tr>
@@ -83,7 +84,7 @@
                    <tr>
 					 <td>Manifest file for TCGA-LUAD</td>
 					 <td><a href="https://portal.gdc.cancer.gov/legacy-archive/search/f">https://portal.gdc.cancer.gov/legacy-archive/search/f</a></td>
-					 <td>Select "TCGA" in the category "Cancer program" on the left, and the "Disease type" as "lung adenocarcinoma". Then, go to files on the top of the left hand side and select "Methylation array" under "Experimental strategy". Last, select "Raw intensities" under "Data type" and "Illumina Human Methylation 450" under "Platform" and click on "Download Manifest"</td>.	
+					 <td>Select "TCGA" in the category "Cancer program" on the left, and the "Disease type" as "lung adenocarcinoma". Then, go to files on the top of the left hand side and select "Methylation array" under "Experimental strategy". Last, select "Raw intensities" under "Data type" and "Illumina Human Methylation 450" under "Platform" and click on "Download Manifest".</td>	
 				  </tr>
 				  <tr>
                      <td>Clinical metadata</td>
@@ -124,7 +125,7 @@ content.springer.com/esm/art%3A10.1038%2Fncomms3612/MediaObjects/41467_2013_BFnc
         </div>
 		
 		<a name="tableDes"></a>
-		<h2>List of Resources</h2>
+		<h2>List of Resources and Intermediate Results</h2>
 		<p>The table below describes the supplementary resources that are available for the reference-free deconvolution protocol.</p>
         <div class="row">
            <div class="col-md-12">               
