--- a/protocol.html
+++ b/protocol.html
@@ -277,9 +277,16 @@ summary {
                     <li>
                         <a href="index.html">About</a>
                     </li>
-					<li class="active">
-						<a href="protocol.html">Protocol</a>
-					</li>
+			<li class="dropdown-active">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Protocol
+				<span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li><a href="protocol.html">MeDeCom Protocol</a></li>
+					<li><a href="protocol_RefFreeEWAS.html">RefFreeEWAS Protocol</a></li>
+					<li><a href="protocol_RRBS.html">RRBS Protocol</a></li>
+				</ul>
+			</li>
+			</li>
                     <li>
                         <a href="resources.html">Resources</a>
                     </li>
@@ -290,6 +297,7 @@ summary {
         <!-- /.container -->
     </nav>
 <div class="container">
+<h1>Reference-free deconvolution protocol using MeDeCom</h1>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <p>This protocol aims at guiding reasearcher how to employ deconvolution
