--- a/resources.html
+++ b/resources.html
@@ -43,10 +43,17 @@
                     <li>
                         <a href="index.html">About</a>
                     </li>
-					<li>
-						<a href="protocol.html">Protocol</a>
-					</li>
-                    <li  class="active">
+			<li class="dropdown-active">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Protocol
+				<span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li><a href="protocol.html">MeDeCom Protocol</a></li>
+					<li><a href="protocol_RefFreeEWAS.html">RefFreeEWAS Protocol</a></li>
+					<li><a href="protocol_RRBS.html">RRBS Protocol</a></li>
+				</ul>
+			</li>
+			</li>
+                    <li>
                         <a href="resources.html">Resources</a>
                     </li>
                </ul>
