Updated protocols according to Pavlos comments

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Protocol
 				<span class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li><a href="protocol.html">MeDeCom Protocol</a></li>
-					<li><a href="protocol_RefFreeEWAS.html">RefFreeEWAS Protocol</a></li>
-					<li><a href="protocol_RRBS.html">RRBS Protocol</a></li>
+					<li><a href="protocol.html">Protocol for 450k data (MeDeCom)</a></li>
+					<li><a href="protocol_RefFreeEWAS.html">Protocol for 450k data (RefFreeEWAS)</a></li>
+					<li><a href="protocol_RRBS.html">Protocol for RRBS data (MeDeCom)</a></li>
 				</ul>
 			</li>
 			</li>
@@ -93,7 +93,7 @@
             <!-- /.col-md-4 -->
             <div class="col-md-3">
                 <h2>Deconvolution</h2>
-                <p>The second stage comprises reference-free deconvolution of the processed DNA methylation data matrix. The protocol supports <a href="http://public.genetik.uni-sb.de/medecom/"><i>MeDeCom</i></a>, as well as <a href="https://cran.r-project.org/web/packages/RefFreeEWAS/index.html"><i>RefFreeCellMix</i></a> and <a href="https://github.com/BRL-BCM/EDec"><i>EDec</i></a>. All of these methods are based on non-negative matrix factoriation (NMF).</p>
+                <p>The second stage comprises reference-free deconvolution of the processed DNA methylation data matrix. The protocol supports <a href="https://github.com/lutsik/MeDeCom"><i>MeDeCom</i></a>, as well as <a href="https://cran.r-project.org/web/packages/RefFreeEWAS/index.html"><i>RefFreeCellMix</i></a> and <a href="https://github.com/BRL-BCM/EDec"><i>EDec</i></a>. All of these methods are based on non-negative matrix factoriation (NMF).</p>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
