--- a/resources.html
+++ b/resources.html
@@ -47,9 +47,9 @@
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Protocol
 				<span class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li><a href="protocol.html">MeDeCom Protocol</a></li>
-					<li><a href="protocol_RefFreeEWAS.html">RefFreeEWAS Protocol</a></li>
-					<li><a href="protocol_RRBS.html">RRBS Protocol</a></li>
+					<li><a href="protocol.html">Protocol for 450k data (MeDeCom)</a></li>
+					<li><a href="protocol_RefFreeEWAS.html">Protocol for 450k data (RefFreeEWAS)</a></li>
+					<li><a href="protocol_RRBS.html">Protocol for RRBS data (MeDeCom)</a></li>
 				</ul>
 			</li>
 			</li>
